--- a/src/Wishlist.css
+++ b/src/Wishlist.css
@@ -104,6 +104,7 @@
 @media (max-width: 768px) {
   .wishlist-page {
     padding: 15px;
+    margin-bottom: 3.5em;
   }
 
   .wishlist-item {
@@ -135,6 +136,7 @@
 @media (max-width: 480px) {
   .wishlist-item {
     padding: 10px;
+
   }
 
   .wishlist-item p {
