--- a/src/Books.css
+++ b/src/Books.css
@@ -17,80 +17,54 @@ body {
 /* Search Area */
 .search-area {
   display: flex;
+  justify-content: center;
   align-items: center;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  padding: 5px;
-  width: 100%;
-  max-width: 100%;
-  background-color: #fff;
-  position: relative;
+  margin: 20px 0;
 }
 
 .search-container {
-  flex: 1;
   display: flex;
   align-items: center;
-  position: relative;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 8px 12px;
+  width: 100%;
+  max-width: 600px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .search-icon {
-  margin-right: 8px;
-  color: #ccc;
+  margin-right: 10px;
+  color: #888;
 }
 
 .search-bar {
   border: none;
   outline: none;
-  width: 90%;
-  font-size: 14px;
+  flex-grow: 1;
+  padding: 5px 0;
+  font-size: 16px;
 }
 
 .filter-container {
   position: relative;
   display: flex;
   align-items: center;
-  width: 10%;
+  cursor: pointer;
 }
-.filter-container.active {
-  width: 60%;
-}
+
 .filter-label {
   display: flex;
   align-items: center;
-  cursor: pointer;
-  color: #555;
+  padding: 5px 10px;
+  background-color: #f0f0f0;
+  border-radius: 5px;
   font-size: 16px;
-  padding: 0 5px;
+  color: #333;
 }
 
-.filter-dropdown {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  background-color: #fff;
-  z-index: 10;
-  overflow-y: auto;
-  max-height: 200px;
-}
 
-.filter-dropdown.active {
-  display: block;
-}
 
-.filter-option {
-  padding: 8px;
-  cursor: pointer;
-  color: #555;
-}
-
-.filter-option:hover {
-  background-color: #f1f1f1;
-}
 
 /* Recommendation Area */
 .recommendation-section {
@@ -203,7 +177,8 @@ body {
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   flex: 1;
-  min-width: 200px;
+  min-width: 35%;
+  max-width: 40%;
   transition: transform 0.3s, box-shadow 0.3s;
 }
 
@@ -302,7 +277,9 @@ body {
   .books-list {
       gap: 15px;
   }
-
+  .book-cardy {
+    min-width: 60%;
+  }
 
 
   .book-cardy h3 {
